--- a/WaterRefillStation/package.json
+++ b/WaterRefillStation/package.json
@@ -15,8 +15,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.5",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
